src/styles/global.less
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  scrollbar-width: auto;
  scroll-behavior: smooth;
  &::-webkit-scrollbar,
  &::-webkit-scrollbar-track {
    background-color: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background: #475569;
    border: 4px solid transparent;
    background-clip: content-box;
    border-radius: 0.625rem;
    @media screen and (max-width: 768px) {
      border-width: 6px;
    }
  }

  &::-webkit-scrollbar-corner {
    opacity: 0;
  }
}

html {
  width: 100vw;
  overflow-x: hidden;
  font-size: 16px;

  @media screen and (max-width: 1300px) {
    font-size: 15px;
  }
}

body {
  font-family: 'Fira Mono', 'Noto Sans SC', sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  line-height: 24px !important;
}

main,
nav {
  width: 60%;
  margin: auto;
  max-width: 1220px;

  @media screen and (max-width: 1100px) {
    width: 85%;
  }

  @media screen and (max-width: 768px) {
    width: 95%;
  }
}

main {
  min-height: calc(100dvh - 100px);
  letter-spacing: 0.5px;
  padding: 0 0.625rem;

  &::-webkit-scrollbar {
    display: none;
  }

  @media screen and (min-width: 1500px) {
    min-height: calc(100dvh - 120px);
  }
}

@media (any-hover: hover) {
  a:hover {
    color: #56b6c2;
  }
}

